# autotools-memleak

./: README.md  configure.ac
src/: Makefile.am  memleak.c
